Verif/Test/Invalide/test_erreur_3.77-14.deca
// Description:
//    Programme soulevant l'erreur (3.77)
// Resultats:
//    Erreur contextuelle
//    Ligne 14 : Les types 'type_null' et 'boolean' sont incompatibles avec l'opérateur binaire '<' (règle 3.77)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 14/01/2012

boolean var;
{
   var = null < true;
}